--- a/MacDown/Localization/Base.lproj/MainMenu.xib
+++ b/MacDown/Localization/Base.lproj/MainMenu.xib
@@ -115,17 +115,24 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="oOV-6A-wGe"/>
-                            <menuItem title="Export as HTML…" keyEquivalent="e" id="dGm-Yl-i3Z">
-                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
-                                <connections>
-                                    <action selector="exportHtml:" target="-1" id="g0v-ZC-o6m"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Export as PDF…" keyEquivalent="E" id="XFN-MJ-RrW">
-                                <modifierMask key="keyEquivalentModifierMask" shift="YES" command="YES"/>
-                                <connections>
-                                    <action selector="exportPDF:" target="-1" id="wLy-tl-SbN"/>
-                                </connections>
+                            <menuItem title="Export" id="5mp-ev-1el">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Export" id="SJM-Pp-ywb">
+                                    <items>
+                                        <menuItem title="HTML…" keyEquivalent="e" id="dGm-Yl-i3Z">
+                                            <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
+                                            <connections>
+                                                <action selector="exportHtml:" target="-1" id="g0v-ZC-o6m"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="PDF…" keyEquivalent="p" id="XFN-MJ-RrW">
+                                            <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
+                                            <connections>
+                                                <action selector="exportPdf:" target="-1" id="Rhh-ni-CdX"/>
+                                            </connections>
+                                        </menuItem>
+                                    </items>
+                                </menu>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="aJh-i4-bef"/>
                             <menuItem title="Page Setup…" keyEquivalent="P" id="qIS-W8-SiK">
