Removed xib settings that seem to crash InterfaceBuilder in 10.8
Some references online that seem to indicate setting `appearanceType=“aqua”` will crash `ibtools`:
- <http://stackoverflow.com/questions/20531240/xcode-5-ibtool-failed-with-exit-code-255>
- <http://www.tyreeapps.com/blog/tools/2014/06/10/Xcode-Crash-with-xib-Files.html>

--- a/MacDown/Localization/Base.lproj/MPDocument.xib
+++ b/MacDown/Localization/Base.lproj/MPDocument.xib
@@ -33,7 +33,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="578"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
-                            <customView appearanceType="aqua" id="WJx-Xb-9af">
+                            <customView id="WJx-Xb-9af">
                                 <rect key="frame" x="0.0" y="0.0" width="509" height="578"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
@@ -69,7 +69,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
-                                    <popUpButton appearanceType="aqua" translatesAutoresizingMaskIntoConstraints="NO" id="kfG-Fe-ode">
+                                    <popUpButton translatesAutoresizingMaskIntoConstraints="NO" id="kfG-Fe-ode">
                                         <rect key="frame" x="163" y="2" width="184" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <constraints>
