--- a/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
+++ b/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
@@ -16,11 +16,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="405" height="279"/>
+            <rect key="frame" x="0.0" y="0.0" width="405" height="302"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0ez-nk-c3q">
-                    <rect key="frame" x="18" y="241" width="84" height="17"/>
+                    <rect key="frame" x="18" y="264" width="84" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CSS:" id="9I3-I7-HLu">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -28,7 +28,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Sy-7mr">
-                    <rect key="frame" x="106" y="236" width="158" height="26"/>
+                    <rect key="frame" x="106" y="259" width="158" height="26"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="DYB-rZ-iFG" id="9Mg-zg-Kvi">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
@@ -45,7 +45,7 @@
                     </connections>
                 </popUpButton>
                 <segmentedControl horizontalHuggingPriority="300" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IJe-cc-YKn">
-                    <rect key="frame" x="267" y="237" width="120" height="24"/>
+                    <rect key="frame" x="267" y="260" width="120" height="24"/>
                     <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="momentary" id="0rH-I9-Dxr">
                         <font key="font" metaFont="smallSystem"/>
                         <segments>
@@ -58,7 +58,7 @@
                     </connections>
                 </segmentedControl>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="f62-wu-Z6p">
-                    <rect key="frame" x="18" y="20" width="84" height="17"/>
+                    <rect key="frame" x="18" y="24" width="84" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Default path:" id="e1A-Mm-svq">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -66,7 +66,7 @@
                     </textFieldCell>
                 </textField>
                 <pathControl verticalHuggingPriority="750" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bih-Hu-dSj">
-                    <rect key="frame" x="105" y="16" width="283" height="22"/>
+                    <rect key="frame" x="105" y="20" width="283" height="22"/>
                     <pathCell key="cell" controlSize="small" selectable="YES" editable="YES" alignment="left" pathStyle="popUp" id="eXH-Mm-BJH">
                         <font key="font" metaFont="smallSystem"/>
                         <url key="url" string="file:///Applications/"/>
@@ -79,7 +79,7 @@
                     </connections>
                 </pathControl>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="5mI-gS-xH9">
-                    <rect key="frame" x="106" y="155" width="281" height="18"/>
+                    <rect key="frame" x="106" y="159" width="281" height="18"/>
                     <buttonCell key="cell" type="check" title="TeX-like math syntax" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="6vg-3f-KWk">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -89,7 +89,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="Zna-RM-nBO">
-                    <rect key="frame" x="106" y="203" width="281" height="18"/>
+                    <rect key="frame" x="106" y="226" width="281" height="18"/>
                     <buttonCell key="cell" type="check" title="Syntax highlighting in code blocks" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="BuQ-02-oQB">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -99,7 +99,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HzY-ws-XRq">
-                    <rect key="frame" x="124" y="115" width="263" height="14"/>
+                    <rect key="frame" x="124" y="119" width="263" height="14"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Math support requires Internet connection." id="5Ch-dG-juL">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -107,7 +107,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2I4-c8-jan">
-                    <rect key="frame" x="183" y="176" width="205" height="22"/>
+                    <rect key="frame" x="172" y="199" width="205" height="22"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="dvX-w7-kuE">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="smallSystem"/>
@@ -119,7 +119,7 @@
                     </connections>
                 </popUpButton>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dd4-T9-cLi">
-                    <rect key="frame" x="124" y="181" width="56" height="14"/>
+                    <rect key="frame" x="113" y="204" width="56" height="14"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="52" id="Trd-jx-pmE"/>
                     </constraints>
@@ -130,7 +130,7 @@
                     </textFieldCell>
                 </textField>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="u5h-MS-cR3">
-                    <rect key="frame" x="123" y="134" width="264" height="18"/>
+                    <rect key="frame" x="123" y="138" width="264" height="18"/>
                     <buttonCell key="cell" type="check" title="Use dollar sign ($) as inline delimiter" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="GF9-Dm-IoB">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
@@ -141,7 +141,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="P7Z-ag-nPR">
-                    <rect key="frame" x="106" y="91" width="281" height="18"/>
+                    <rect key="frame" x="106" y="95" width="281" height="18"/>
                     <buttonCell key="cell" type="check" title="Task list syntax" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="kBf-iW-HlH">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -151,7 +151,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="lxX-Pm-dhn">
-                    <rect key="frame" x="106" y="51" width="281" height="18"/>
+                    <rect key="frame" x="106" y="55" width="281" height="18"/>
                     <buttonCell key="cell" type="check" title="Translate newlines to &lt;br&gt; tags" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Sty-qG-J6K">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -161,7 +161,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="hfI-Rf-3Cr">
-                    <rect key="frame" x="106" y="71" width="281" height="18"/>
+                    <rect key="frame" x="106" y="75" width="281" height="18"/>
                     <buttonCell key="cell" type="check" title="Detect Jekyll front-matter" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="iXi-Pv-mFl">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -170,19 +170,30 @@
                         <binding destination="-2" name="value" keyPath="self.preferences.htmlDetectFrontMatter" id="Xhf-5g-BUf"/>
                     </connections>
                 </button>
+                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nVL-kS-2Fx">
+                    <rect key="frame" x="124" y="182" width="264" height="18"/>
+                    <buttonCell key="cell" type="check" title="Show line numbers" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="yhu-Ny-HcQ">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="smallSystem"/>
+                        <connections>
+                            <binding destination="-2" name="enabled" keyPath="self.preferences.htmlSyntaxHighlighting" id="PEi-XZ-hGF"/>
+                            <binding destination="-2" name="value" keyPath="self.preferences.htmlLineNumbers" id="Ugf-l9-tjm"/>
+                        </connections>
+                    </buttonCell>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="lxX-Pm-dhn" firstAttribute="top" secondItem="hfI-Rf-3Cr" secondAttribute="bottom" constant="6" id="4JA-Ih-oKr"/>
-                <constraint firstItem="2I4-c8-jan" firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" id="4VK-KY-tAn"/>
+                <constraint firstItem="2I4-c8-jan" firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" constant="-11" id="4VK-KY-tAn"/>
                 <constraint firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" constant="20" id="60U-Ld-RXh"/>
                 <constraint firstItem="u5h-MS-cR3" firstAttribute="top" secondItem="5mI-gS-xH9" secondAttribute="bottom" constant="8" id="9Ba-Ui-HgP"/>
                 <constraint firstItem="5mI-gS-xH9" firstAttribute="trailing" secondItem="u5h-MS-cR3" secondAttribute="trailing" id="AWd-pf-VlH"/>
-                <constraint firstAttribute="bottom" secondItem="f62-wu-Z6p" secondAttribute="bottom" constant="20" id="Br9-WO-eJN"/>
+                <constraint firstAttribute="bottom" secondItem="f62-wu-Z6p" secondAttribute="bottom" constant="24" id="Br9-WO-eJN"/>
                 <constraint firstItem="Zna-RM-nBO" firstAttribute="leading" secondItem="lxX-Pm-dhn" secondAttribute="leading" id="CJg-gC-Tc9"/>
-                <constraint firstItem="5mI-gS-xH9" firstAttribute="top" secondItem="2I4-c8-jan" secondAttribute="bottom" constant="8" id="CLN-3m-mst"/>
+                <constraint firstItem="5mI-gS-xH9" firstAttribute="top" secondItem="2I4-c8-jan" secondAttribute="bottom" constant="27" id="CLN-3m-mst"/>
                 <constraint firstItem="Zna-RM-nBO" firstAttribute="leading" secondItem="5mI-gS-xH9" secondAttribute="leading" id="Hne-bE-ZOU"/>
                 <constraint firstItem="2I4-c8-jan" firstAttribute="top" secondItem="Zna-RM-nBO" secondAttribute="bottom" constant="8" id="JCt-zH-DPb"/>
-                <constraint firstItem="Dd4-T9-cLi" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" constant="18" id="KRr-S2-xD0"/>
+                <constraint firstItem="Dd4-T9-cLi" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" constant="7" id="KRr-S2-xD0"/>
                 <constraint firstAttribute="trailing" secondItem="5mI-gS-xH9" secondAttribute="trailing" constant="20" id="Mfw-kE-xOv"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="Wgm-Sy-7mr" secondAttribute="centerY" id="Nqd-iB-6u0"/>
                 <constraint firstItem="P7Z-ag-nPR" firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" id="PMM-Pd-n8i"/>
@@ -206,13 +217,14 @@
                 <constraint firstItem="P7Z-ag-nPR" firstAttribute="leading" secondItem="hfI-Rf-3Cr" secondAttribute="leading" id="nAd-6O-4Fe"/>
                 <constraint firstItem="f62-wu-Z6p" firstAttribute="trailing" secondItem="0ez-nk-c3q" secondAttribute="trailing" id="px3-Z0-OAl"/>
                 <constraint firstItem="5mI-gS-xH9" firstAttribute="leading" secondItem="Wgm-Sy-7mr" secondAttribute="leading" id="rd0-o3-nQU"/>
-                <constraint firstAttribute="bottom" secondItem="bih-Hu-dSj" secondAttribute="bottom" constant="20" id="t0q-58-ThI"/>
+                <constraint firstAttribute="bottom" secondItem="bih-Hu-dSj" secondAttribute="bottom" constant="24" id="t0q-58-ThI"/>
                 <constraint firstItem="P7Z-ag-nPR" firstAttribute="top" secondItem="HzY-ws-XRq" secondAttribute="bottom" constant="8" id="tsK-st-L5Y"/>
                 <constraint firstItem="P7Z-ag-nPR" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" id="u7s-1X-JUf"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="ucH-qv-lLz"/>
                 <constraint firstItem="Zna-RM-nBO" firstAttribute="trailing" secondItem="lxX-Pm-dhn" secondAttribute="trailing" id="uyV-Q1-Qo7"/>
                 <constraint firstItem="HzY-ws-XRq" firstAttribute="top" secondItem="u5h-MS-cR3" secondAttribute="bottom" constant="8" id="xuL-FG-B7V"/>
             </constraints>
+            <point key="canvasLocation" x="261.5" y="368"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="QE5-Wu-kC2"/>
     </objects>
